include other componenets to render information on page to work with authentication

--- a/client/src/Styles/main.scss
+++ b/client/src/Styles/main.scss
@@ -1,3 +1,4 @@
 @import '../Components/Hero/Hero.scss';
 @import '../Components/NavBar/NavBar.scss';
 @import '../Components/App.scss';
+@import '../Components/Employees/Employees.scss';
