--- a/client/src/Styles/_custom.scss
+++ b/client/src/Styles/_custom.scss
@@ -8,3 +8,8 @@
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   background-color: #fff;
 }
+
+.row {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
