add render component, up is to add server info

--- a/client/src/Styles/main.scss
+++ b/client/src/Styles/main.scss
@@ -2,3 +2,4 @@
 @import '../Components/App.scss';
 @import '../Components/Employees/Employees.scss';
 @import '../Components/HomePage/Homepage.scss';
+@import '../Components/PwReset/PwReset.scss';
